k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taller-k8s
  labels:
    entorno: lab
    equipo: adso
