k8s/manifests/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-servicio-interno
  namespace: taller-k8s
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 8080
      targetPort: 80
