k8s/manifests/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-servicio-nginx
  namespace: taller-k8s
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
